...
    <string name="signInVisitorUsingGoogle">Visitante, inicie sesión con tu cuenta de Google</string>
    <string name="IDRequired">Debe ingresar con el numero de cédula registrado al ingreso del mall</string>


    <string name="adminWelcome">Bienvenido Administrador</string>
    <string name="chartVisitors">Estadística visitantes:</string>
    <string name="listVisitors">Acceder visitantes</string>

    <string name="visitorWelcome">Bienvenido Visitante</string>
    <string name="lastVisit">Datos de mi última visita:</string>
    <string name="listMyVisits">Mi historial</string>

    <!-- Fragment visitante -->
    <string name="temperature">Temperatura: </string>
    <string name="temperature_hint">38 ºc</string>
    <string name="hora">Hora: </string>
    <string name="fecha">Fecha: </string>
...
