...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_accederVHistorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#63A0D0"
                android:text="@string/listVisitors" />

            <Button
                android:id="@+id/btnSignOutAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#63A0D0"
                android:text="@string/signOut" />
        </LinearLayout>
...
