...
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_MiHistorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="#63A0D0"
                android:text="@string/listMyVisits" />

            <Button
                android:id="@+id/btnSignOutVisitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="#63A0D0"
                android:text="@string/signOut" />
        </LinearLayout>
...
